sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: firstdeploy
  name: firstdeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstdeploy
  strategy: {}
  template:
    metadata:
      labels:
        app: firstdeploy
    spec:
      containers:
      - image: lordbean/nodeapiserver
        name: simplewebapi
        resources: {}
status: {}
