basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: test.local
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: firstdeploy
             port:
               number: 3000
